welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: expected class or object definition
def Colonne(){
^ColumnByColumn:10: error: Unmatched closing brace '}' ignored here
  }} 
   ^